Add total protection and behaviour modifier
- Calculate protection taking into account shield
- Boon Cautious and penalty Risk implemented

--- a/lang/en.json
+++ b/lang/en.json
@@ -55,10 +55,10 @@
                 "description": "les dégâts de l’attaque augmentent de 1d6. Plusieurs Attaques meurtrières augmentent les dégâts d’autant de d6 que d’Attaques meurtrières.",
                 "chatmessage": "Bonus: Lethal Attack (x{lethalattack})."
             },
-            "mutlipleattacks":{
-                "label": "mutlipleattacks",
+            "multipleattacks":{
+                "label": "multipleattacks",
                 "description": "l’attaque vise deux cibles à la fois, à condition qu’elles soient accessibles au personnage – à son contact pour une attaque de corps à corps, groupées pour un tir. Un seul test est e{ectué et les dégâts, après tous les autres calculs, sont divisés par 2 et, si nécessaire, arrondis au nombre entier supérieur.",
-                "chatmessage": "Bonus: mutlipleattacks."
+                "chatmessage": "Bonus: multipleattacks."
             },
             "efficiency":{
                 "label": "efficiency",
