--- a/lang/en.json
+++ b/lang/en.json
@@ -91,7 +91,8 @@
             "damageresult": "Damages are: ",
             "weapon": "Weapon ({nbDices}d6)",
             "heroism": "Heroism",
-            "lethalattack": "Methal attack"
+            "lethalattack": "Lethal",
+            "explosive": "Explosive"
         },
         "dialog":{
             "rollmodifier": "Modifier for the roll: ",
