Add translation for actor and item types

--- a/lang/fr.json
+++ b/lang/fr.json
@@ -1,4 +1,17 @@
 {
+    "ACTOR": {
+        "TypePlayer": "Joueur",
+        "TypeNpc": "PNJ"
+    },
+
+    "ITEM": {
+        "TypeWeapon": "Arme",
+        "TypeArmor": "Armure",
+        "TypeEquipment": "Objet",
+        "TypeBoon": "Atout",
+        "TypeSkill": "Compétence"
+    },
+
     "CLEENMAIN": {
         "label": {
             "activity": "Occupation",
