--- a/lang/en.json
+++ b/lang/en.json
@@ -1,4 +1,17 @@
 {
+    "ACTOR": {
+        "TypePlayer": "Player",
+        "TypeNpc": "NPC"
+    },
+
+    "ITEM": {
+        "TypeWeapon": "Weapon",
+        "TypeArmor": "Armor",
+        "TypeEquipment": "Item",
+        "TypeBoon": "Boon",
+        "TypeSkill": "Skill"
+    },
+    
     "CLEENMAIN": {
         "label": {
             "activity": "Activity",
